--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "cross-env": "^7.0.2",
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
+    "react-daum-postcode": "^1.8.4",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
