--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "moment": "^2.24.0",
     "mongoose": "^5.9.5",
     "morgan": "~1.9.1",
+    "multer": "^1.4.2",
     "nodemailer": "^6.4.6"
   },
   "devDependencies": {
