--- a/client/package.json
+++ b/client/package.json
@@ -6,14 +6,16 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "antd": "^4.0.3",
+    "antd": "^4.1.5",
     "axios": "^0.19.2",
     "cross-env": "^7.0.2",
     "node-sass": "^4.13.1",
+    "query-string": "^6.12.1",
     "react": "^16.13.1",
     "react-daum-postcode": "^1.8.4",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
+    "react-responsive-carousel": "^3.2.7",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
