--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Aesop2418",
   "license": "ISC",
   "dependencies": {
-    "concurrently": "^5.1.0"
+    "concurrently": "^5.1.0",
+    "socket.io-client": "^2.3.0"
   }
 }
