--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,8 @@
     "mongoose": "^5.9.5",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
-    "nodemailer": "^6.4.6"
+    "nodemailer": "^6.4.6",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
